# glyph-js

./: .gitignore  .gitmodules  LICENSE  README.md  binding_darwin.gyp  binding_linux.gyp  install.js  main.js  module.cc  package-lock.json  package.json
lib/: Makefile.emscripten  addon-darwin-x64.node  build.sh  glyph.js  main.js
lib/glyph/: CMakeLists.txt  Makefile.gcc  debug.c  glp.c  glp.h  glp_consts.h  glp_consts_1024.h  glp_rand.c  glp_rand.h  glp_rand_openssl_aes.c  glp_rand_openssl_aes.h  glp_utils.c  glp_utils.h  glyph  glyph.c  glyph.h  makefile
lib/glyph/FFT/: FFT_1024_59393.h  FFT_includes.h
lib/glyph/aes/: aes.h  aes_core.c  aes_ctr.c  aes_locl.h
lib/glyph/test/: test.c  test_glyph.c  test_glyph.h  test_vectors.c  test_vectors.h  test_vectors_1024.h
test/: data.js  glyph.spec.js
